--- a/src/importer/SampleConsole/SampleConsole.csproj
+++ b/src/importer/SampleConsole/SampleConsole.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\libs\KiCadSharp\KiCadSharp.csproj" />
+    <ProjectReference Include="..\..\libs\SExpressionSharp\SExpressionSharp.csproj" />
+  </ItemGroup>
+
 </Project>
